Updated Employee Table error message alignment and end client name sorting issue resloved

--- a/src/app/views/jobs/create-update-job/create-update-job.component.scss
+++ b/src/app/views/jobs/create-update-job/create-update-job.component.scss
@@ -71,3 +71,6 @@
   .radio-button{
     margin-left: 10px;
   }
+  .employee-details-table tbody tr td{
+    text-align: start !important;
+  }
